# KaitenSushi

./: README.md  client_read.py  client_write.py  server.py  setup.py  utils.py
kaitensushi/: __init__.py  client_read.py  reader.py  server.py  utils.py
src/: CMakeLists.txt  writer.cpp
src/include/kaitensushi/: headers.h  utils.h  writer.h
src/test/: write.cpp
test/: read.py  write.py
test/cpp/: CMakeLists.txt  write.cpp
test/python/: raw_server.py  read.py  server.py  write.py
